AUTOMAKE_OPTIONS=subdir-objects
bin_PROGRAMS=modou

modou_SOURCES=main.cpp \
	helloworld.hpp \
	gui/LoginDlg.h \
	gui/LoginDlg.cpp \
	gui/XWindow.h \
	gui/XWindow.cpp \
	sdlhelp.hpp \
	font/XFont.cpp \
	font/XFont.h \
	utils/stringutils.h \
	utils/stringutils.cpp \
	gui/XTextField.h \
	gui/XTextField.cpp \
	gui/XButton.h \
	gui/XButton.cpp \
	gui/XPassworldField.h \
	gui/XPassworldField.cpp \
	Game.h \
	Game.cpp \
	gui/XViewport.h \
	gui/XViewport.cpp \
	gui/XDesktop.h \
	gui/XDesktop.cpp \
	map/XMap.h \
	map/XMap.cpp \
	map/XMapLayer.h \
	map/XMapLayer.cpp \
	map/TmxMap.h \
	map/TmxMap.cpp \
	being/XLocalPlayer.h \
	being/XLocalPlayer.cpp \
	XVector.h \
	XVector.cpp \
	being/XActor.h \
	being/XActor.cpp \
	map/XMapReader.h \
	map/XMapReader.cpp \
	being/XSpirit.h \
	being/XSpirit.cpp \
	net/pkg.h \
	net/LoginConn.h \
	net/LoginConn.cpp \
	gui/WorldSelectDlg.h \
	gui/WorldSelectDlg.cpp \
	map/FindPath.cpp \
	map/FindPath.h \
	map/XTilePoint.h \
	map/XTilePoint.cpp  \
	menum.h

